--- a/index.html
+++ b/index.html
@@ -1,22 +1,55 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Resume</title>
 </head>
 <body>
-    <h1>Tal C's Protfolio</h1>
+    <h1>Tal Cohen</h1>
+
+    <img src="./Me/IMG-20221225-WA0031.jpeg" height="100" width="100">
+
+    <h4 style="color: rgb(132, 184, 184);">Software Engeneering</h4>  
+
+    <h4>Date Of Birth - 13/07/2000</h4>
+
+    <h4><Address>Israel, Raanana, Dgania 45</Address></h4>
     
-    <h2>I'm A Web Developer</h2>
+    <h4 style="color: blue;"><u>talor453@gmail.com</u></h4>
 
     <hr>
 
-    <a href="./public/movie-ranking.html"><h2>Ranking Project</h2></a>
-    <img src="./assets/צילום מסך 2023-09-17 132634.png" height="200" width="300">
+    <h2>Summary</h2>
+    Certified software developer determined to work hard and show my abilities in programming while I strive to learn more and improve my abilities in the workplace.
+    
+    <h2>Education</h2>
+     <ul>
+        <li>Full 12 years of school education, <a style="color: blue;">2006 - 2018</a></li>
+        <li>High School Diploma, <a style="color: blue;">2015 - 2018</a> </li> 
+    </ul>
 
-    <a href="./public/birthday-invite.html"><h2>Birthday Invite Project</h2></href>
-    <img src="./assets/צילום מסך 2023-09-17 132354.png"
-    srcset="./assets/צילום מסך 2023-09-17 132354.png" height="300" width="300">
+    <h2>Work Experience</h2>
+    <ul>
+        <li>Military Service - Served in search and rescue while performing combat duties, <a style="color: blue;">2018 - 2021</a> </li>
+        <li>Waitering, <a style="color: blue;">2021 - 2023</a></li>
+        <li>Security - Working in city patrol, <a style="color: blue;">2023 - Today</a></li>
+    </ul>
+
+    <h2>Skills</h2>
+    <ul>
+        <li>Adept in working with military technologies</li>
+        <li>I have completed training as a security guard </li>
+    </ul>
+    <hr>
+
+    <a href="./Me/Contact me">Contact Information</a>
+
+    <footer>
+        <small>
+            <p>Copyright © Tal Cohen</p>
+        </small>
+    </footer>
 
 
 </body>
